--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "gulp-rename": "^1.4.0",
     "react": "^15.6.2",
     "react-dom": "^15.6.2"
+  },
+  "dependencies": {
+    "express": "^4.16.4"
   }
 }
